--- a/docs/styles.css
+++ b/docs/styles.css
@@ -8,24 +8,28 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0,0,0,0.9);
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
 /* Styl modal-content */
 .modal-content {
-  margin: 15% auto;
+  margin: 5% auto;
   display: block;
   width: 70%;
   max-width: 800px;
+  background-color: #fefefe;
+  padding: 20px;
+  border-radius: 10px;
+  position: relative;
 }
 
 /* Styl close */
 .close {
-  color: #fff;
+  color: #333;
   font-size: 30px;
   font-weight: bold;
   position: absolute;
-  top: 15px;
-  right: 25px;
+  top: 10px;
+  right: 10px;
   cursor: pointer;
 }
